--- a/views/studentHome.ejs
+++ b/views/studentHome.ejs
@@ -1,1 +1,290 @@
-studentHome
+<%-include('studentHeader')%>
+
+<style>
+  @import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,900,700,500,300,100); * { margin: 0; box-sizing: border-box; } .card-body h2{ font-weight: 900; font-size: 20px; padding: 30px 0 5px 0; } .body { background: #fff; font-family: "Roboto", sans-serif; background-size: 100%; height: 700px; } .body::-webkit-scrollbar { width: -0px; } ::selection { background: #f31544; color: #fff; } ::moz-selection { background: #f31544; color: #fff; } .body h1 { font-size: 1.5em; color: #222; } .body h2 { font-size: 1.5em; color:#000 } .body h3 { font-size: 1.5em; font-weight: 300; line-height: 2em; } .body p { font-size: 1.3rem; color: #000; font-weight: 600; line-height: 1.4em; } .body #invoiceholder { width: 100%; height: 100px; } .body #headerimage { z-index: -1; position: relative; top: -50px; height: 350px; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 -2px 4px rgba(0, 0, 0, 0.15); -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 -2px 4px rgba(0, 0, 0, 0.15); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 -2px 4px rgba(0, 0, 0, 0.15); overflow: hidden; background-attachment: fixed; background-size: 1920px 80%; background-position: 50% -90%; } td{ font-weight: 500; font-size: 1.1rem; color: #000; } .body #invoice { position: relative; top: -290px; border:solid 1px; margin: 0 auto; width: 1100px; scale: 1.001; background: #fff; } [id*="invoice-"] { /* Targets all id with 'col-' */ border-bottom: 1px solid #eee; padding: 30px; } .body #invoice-top { min-height: 120px; } .body #invoice-mid { min-height: 120px; } .body #invoice-bot { min-height: 250px; } .body .logo { float: left; height: 60px; width: 60px; /* background: url(/images/MME\ LOGO1\ \(1\).png); */ background-size: 60px 60px; } .body .info { display: block; display: flex; float: left; flex-direction: column; margin-left: 20px; } .body .title { float: right; } .body .title p { text-align: right; } .body #project { margin-left: 52%; } .body table { width: 100%; border-collapse: collapse; } .body td { padding: 5px 0 5px 15px; border: 1px solid #eee; text-align: left; } .body .tabletitle { padding: 5px; background: #afafaf; } .body .service { border: 1px solid #eee; } .body .item { width: 50%; } .body .itemtext { font-size: 1.6rem; margin:0; padding: 10px; } .body #legalcopy { margin-top: 30px; } .body form { float: right; margin-top: 30px; text-align: right; } .body .effect2 { position: relative; } .body .legal { width: 70%; } .present{ color: green; background-color: aqua; }
+</style>
+
+<main id="main" class="main">
+
+  <%if(messages.success){%>
+
+    <div class="alert alert-success">
+      <%=messages.success[0]%>
+      <%console.log(messages.success[0])%>
+    </div>
+    <%}%> 
+        <section class="section profile">
+            <div class="row">
+              <div class="col-xl-4">
+      
+                <div class="card">
+                  <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
+      
+                    <img src="<%=data.img%>" alt="Profile" class="">
+                    <h2><%=data.name%></h2>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-xl-8">
+      
+                <div class="card">
+                  <div class="card-body pt-3">
+                    <div class="tab-content pt-2">
+      
+                      <div class="tab-pane fade show active profile-overview" id="profile-overview">
+                        <h5 class="card-title">Student Details</h5>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label ">Student Name</div>
+                          <div class="col-lg-9 col-md-8"><%=data.name%></div>
+                        </div>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Student Email</div>
+                          <div class="col-lg-9 col-md-8"><%=data.semail%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Student Mobile</div>
+                          <div class="col-lg-9 col-md-8"><%=data.smobile%></div>
+                        </div>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Course</div>
+                          <div class="col-lg-9 col-md-8"><%=data.course%></div>
+                        </div>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Fees</div>
+                          <div class="col-lg-9 col-md-8"><%=data.fees%></div>
+                        </div>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Time</div>
+                          <div class="col-lg-9 col-md-8"><%=data.time%></div>
+                        </div>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Date</div>
+                          <div class="col-lg-9 col-md-8"><%=data.date%></div>
+                        </div>
+      
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Gender</div>
+                          <div class="col-lg-9 col-md-8"><%=data.gender%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Parent's Mobile No.</div>
+                          <div class="col-lg-9 col-md-8"><%=data.pmobile%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Parent's Email</div>
+                          <div class="col-lg-9 col-md-8"><%=data.pemail%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Paid Fees</div>
+                          <div class="col-lg-9 col-md-8"><%=data.paid_fees%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Pending Fees</div>
+                          <div class="col-lg-9 col-md-8"><%=data.panding_fees%></div>
+                        </div>
+                      </div>
+      
+                      <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
+      
+                        <!-- Profile Edit Form -->
+                        <form>
+                          <div class="row mb-3">
+                            <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+                            <div class="col-md-8 col-lg-9">
+                              <img src="/img/profile-img.jpg" alt="Profile">
+                              <div class="pt-2">
+                                <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
+                                <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
+                              </div>
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="fullName" type="text" class="form-control" id="fullName" value="Kevin Anderson">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
+                            <div class="col-md-8 col-lg-9">
+                              <textarea name="about" class="form-control" id="about" style="height: 100px">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</textarea>
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="company" type="text" class="form-control" id="company" value="Lueilwitz, Wisoky and Leuschke">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="job" type="text" class="form-control" id="Job" value="Web Designer">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="country" type="text" class="form-control" id="Country" value="USA">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="address" type="text" class="form-control" id="Address" value="A108 Adam Street, New York, NY 535022">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="phone" type="text" class="form-control" id="Phone" value="(436) 486-3538 x29071">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="email" type="email" class="form-control" id="Email" value="k.anderson@example.com">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Twitter" class="col-md-4 col-lg-3 col-form-label">Twitter Profile</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="twitter" type="text" class="form-control" id="Twitter" value="https://twitter.com/#">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Facebook" class="col-md-4 col-lg-3 col-form-label">Facebook Profile</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="facebook" type="text" class="form-control" id="Facebook" value="https://facebook.com/#">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Instagram" class="col-md-4 col-lg-3 col-form-label">Instagram Profile</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="instagram" type="text" class="form-control" id="Instagram" value="https://instagram.com/#">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="Linkedin" class="col-md-4 col-lg-3 col-form-label">Linkedin Profile</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="linkedin" type="text" class="form-control" id="Linkedin" value="https://linkedin.com/#">
+                            </div>
+                          </div>
+      
+                          <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                          </div>
+                        </form><!-- End Profile Edit Form -->
+      
+                      </div>
+      
+                      <div class="tab-pane fade pt-3" id="profile-settings">
+      
+                        <!-- Settings Form -->
+                        <form>
+      
+                          <div class="row mb-3">
+                            <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Email Notifications</label>
+                            <div class="col-md-8 col-lg-9">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="changesMade" checked>
+                                <label class="form-check-label" for="changesMade">
+                                  Changes made to your account
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="newProducts" checked>
+                                <label class="form-check-label" for="newProducts">
+                                  Information on new products and services
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="proOffers">
+                                <label class="form-check-label" for="proOffers">
+                                  Marketing and promo offers
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="securityNotify" checked disabled>
+                                <label class="form-check-label" for="securityNotify">
+                                  Security alerts
+                                </label>
+                              </div>
+                            </div>
+                          </div>
+      
+                          <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                          </div>
+                        </form><!-- End settings Form -->
+      
+                      </div>
+      
+                      <div class="tab-pane fade pt-3" id="profile-change-password">
+                        <!-- Change Password Form -->
+                        <form>
+      
+                          <div class="row mb-3">
+                            <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="password" type="password" class="form-control" id="currentPassword">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="newpassword" type="password" class="form-control" id="newPassword">
+                            </div>
+                          </div>
+      
+                          <div class="row mb-3">
+                            <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
+                            <div class="col-md-8 col-lg-9">
+                              <input name="renewpassword" type="password" class="form-control" id="renewPassword">
+                            </div>
+                          </div>
+      
+                          <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Change Password</button>
+                          </div>
+                        </form><!-- End Change Password Form -->
+      
+                      </div>
+      
+                    </div><!-- End Bordered Tabs -->
+      
+                  </div>
+                </div>
+      
+              </div>
+            </div>
+          </section>
+      
+
+  </main><!-- End #main -->
+<%-include('footer')%>
